implement proto contracts and open api handlers
